Отработал полученные комментарии и внесены корректировки